@@ -1,8 +1,11 @@
 2000-11-17  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
 
 	* transports/libta/mimeheaders.c:
-	    Missing initialization of one buffer -> result is
-	    memory scrible and utter chaos..
+	    - Missing initialization of one buffer -> result is
+	      memory scrible and utter chaos..
+	    - Wondering of X-Warning: writer does something fishy,
+	      as the Received: header generated by the site where
+	      that writer is used does not appear in the message..
 
 	* proto/scheduler.conf.in, proto/db/routes:
 	    Define channel   smtp-log  which (obviously) logs
